@@ -2,7 +2,7 @@ V5.0.0 (March 29th, 2017):
 ▔▔▔▔▔▔▔▔▔▔▔
 Manager App:
  • NEW: Name Changed to NST Manager
- • NEW: Manager and Automations code has been split into two individual files.
+ • NEW: Manager and Automations codebase has been split into two individual files.
  • NEW: Find Weather Locations using integrated Wunderground's search API.
  • NEW: Token's are now redacted from all IDE logs to prevent them from being shared.
  • NEW: Fresh New Notification UI right off the first page of the Manager.
@@ -16,9 +16,10 @@ Manager App:
  • NEW: Fresh New Notification UI right off the first page of the Manager.
  • NEW: Control Watch-Dog Notifications from Manager
  • UPDATED: Re-Structured the Managers Setting Area to simplify things.
+ • UPDATED: Moved device preferences to the Manage Devices section.
  • NEW: Tests on Nest Protects are auto-disabled after 15 minutes if they are left on.
  • NEW: Adding Toggle to disable all automations right from the Automation section under the Manager.
- • NEW: Turn off graphs and history in Thermostat and Weather devices from the Manager.
+ • NEW: Turn graphs and history on/off in the Thermostat and Weather devices from the Manager.
  • NEW: Added support to send Automation Event history and Who set eco to the Thermostat device. (Part of the new Thermostat UI).
  • NEW: Added Hub to the install of all new devices to help support ST's Device history.
  • NEW: Added Change logs the are shown when a new version is published .
@@ -26,6 +27,7 @@ Manager App:
  Automations App:
  • NEW: Humidity Control Automation;  Works with Switch controlled humidifiers (*** Requires a third-party DTH for HVAC humidifiers)
  • FIXED: Fixed Status text to auto-sort by device name
+ • FIXED: Dozen's of cleanups and bug-fixes
 
 V4.5.1 (January 26th, 2017):
 ▔▔▔▔▔▔▔▔▔▔▔
